WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13876
Box-Shadow disappears if shadow doesn't fit in the window size
https://bugs.webkit.org/show_bug.cgi?id=13876
Summary
Box-Shadow disappears if shadow doesn't fit in the window size
Gustaaf Groenendaal (MysteryQuest)
Reported
2007-05-25 10:17:00 PDT
The shadow on the right side of the table doesn't show up when the page doesn't fit in a browser window. Resize the window in the url to less then 500x500px. You will notice that you can't see the box-shadow on the right side of the box.
Attachments
Add box-shadow to table visual overflow
(49.38 KB, patch)
2007-05-26 09:46 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-25 10:21:36 PDT
Forgot to add box-shadow to RenderTable overflow.
Dave Hyatt
Comment 2
2007-05-25 13:31:51 PDT
Did you forget RenderFlexibleBox too?
mitz
Comment 3
2007-05-25 13:41:04 PDT
(In reply to
comment #2
)
> Did you forget RenderFlexibleBox too? >
No! :-)
mitz
Comment 4
2007-05-26 09:46:13 PDT
Created
attachment 14738
[details]
Add box-shadow to table visual overflow
Dave Hyatt
Comment 5
2007-05-26 15:05:50 PDT
Comment on
attachment 14738
[details]
Add box-shadow to table visual overflow r=me
Sam Weinig
Comment 6
2007-05-26 15:33:58 PDT
Landed in
r21807
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug