LayoutTests:

Reviewed by Hyatt.

        - updated tests for http://bugs.webkit.org/show_bug.cgi?id=13876
          Box-Shadow disappears if shadow doesn't fit in the window size

        * fast/repaint/box-shadow-h-expected.checksum:
        * fast/repaint/box-shadow-h-expected.png:
        * fast/repaint/box-shadow-h-expected.txt:
        * fast/repaint/box-shadow-h.html:
        * fast/repaint/box-shadow-v-expected.checksum:
        * fast/repaint/box-shadow-v-expected.png:
        * fast/repaint/box-shadow-v-expected.txt:
        * fast/repaint/box-shadow-v.html:

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13876
          Box-Shadow disappears if shadow doesn't fit in the window size

        Tests: fast/repaint/box-shadow-h.html
               fast/repaint/box-shadow-v.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::layout):



Canonical link: https://commits.webkit.org/18208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21807 268f45cc-cd09-0410-ab3c-d52691b4dbfc